"$Id$"
Top of SVN tree:
------------------------------------------------------------------------------

gtk-v2/src/metaserver.c: Modify metaserver_connect_to so it can connect to
  servers running on different ports (eg, localhost:13328).  Gtk1 client
  already handles this fine, so this is only a change for the gtk2 client.
MSW 2007-09-16

gtk-v2/src/stats.c
gtk-v2/src/spells.c
gtk-v2/src/keys.c
gtk-v2/src/map.c
gtk-v2/src/metaserver.c
gtk-v2/src/magicmap.c
gtk-v2/src/image.c
gtk-v2/src/sdl.c
gtk-v2/src/opengl.c
gtk-v2/src/png.c
gtk-v2/src/sound.c
gtk-v2/src/main.h
gtk-v2/src/info.c
gtk-v2/src/pickup.c
  - Tabs --> spaces.
gtk-v2/src/config.c
gtk-v2/src/inventory.c
  - Tabs --> spaces.
  - End-of-line whitespace removed.
Kevin Bulgrien 2007-09-16

gtk-v2/src/map.c
gtk-v2/src/main.c
  - Fix for SourceForge Bugs Tracker #1794455 Libglade client Magic Map:
    cannot return to Map.  During the libglade conversion, and incorrect
    g_signal_connect() call was placed in map.c.  The corrected connection
    is now made in main.c where the magic_map pointer is initialized.
gtk-v2/glade/README
  - Add a note for glade file developers concerning the MAGIC_MAP_PAGE
    define that constrains the tab on which magic maps must appear.
Kevin Bulgrien 2007-09-14

Improve metaserver handling some - in particular, if server is listed
on both metaserver 1 & 2, listed it only once.  Also, for gtk2 client,
fix handling of not showing cached entries if they are listed on the
metaserver.  Add filtering of protocol versions, so we only show player
compatible servers.
--
common/metaserver.c: Add check_server_version() to do version checking.
  Add checks to find duplicate server entries.
gtk-v2/src/metaserver.c: Move retrieval of data from metaserver before
  adding cached entries to table - otherwise, can not detect duplicates.
  Add check to proper version information.
MSW 2007-09-13

common/client.h
- Add doxygen file header.
gtk-v2/src/gtk2proto.h
gtk-v2/src/main.c